# CodeForces-API

./: .gitignore  app.py  config.py  pyproject.toml  readme.md  requirements.txt  wsgi.py
models/: base.py  contests.py  errors.py  heatmap.py  rating.py  stats.py  templates.py  unified.py  users.py
models/canonical/: constants.py
routes/: badges.py  contest_routes.py  contests.py  docs.py  heatmap.py  legacy.py  profile.py  rating.py  stats.py  summary.py  topics.py  unified_routes.py  user_routes.py
services/: canonical_mapper.py  codeforces_service.py  contests.py  heatmap.py  rating.py  stats.py  unified_mapper.py  users.py
tests/: test_badges_endpoint.py  test_canonical.py  test_unified.py
