[project]
name = "codeforces-api"
version = "1.0.0"
description = "A FastAPI app for the Codeforces Stats"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.11.0",
    "redis>=5.2.0",
    "uvicorn>=0.34.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]
